<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Russian Railroads Scorer</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="score">Score:</string>
    <string name="zero">0</string>
    <string name="clear">Clear</string>
    <string name="amount_to_subtract">Amount To Subtract:</string>
    <string name="amount_to_add">Amount To Add:</string>
    <string name="industry_amount">Industry Amount:</string>


    <!--
    These are tossed into Integer.parseInt, in CalculatorActivity.industryButton_Click.
    If they get translated, be sure to ensure that works properly - may need a mapping table.

    The resource numbers above are not treated in the same way, and don't need modification.
    -->
    <string-array name="industry_amounts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <!-- Used for accessibility, contentDescription -->
    <string name="doubler">Doubler</string>
    <string name="revaluation_marker">Revaluation Marker</string>
    <string name="grey">Grey</string>
    <string name="brown">Brown</string>
    <string name="beige">Beige</string>
    <string name="white">White</string>
    <string name="industry">Industry</string>
    <string name="german_revaluation_marker">German Railroads Revaluation Marker</string>
    <string name="start_cards">Start Cards</string>
    <string name="random_start_bonus_cards">Random Start Bonus Cards</string>

    <!--
    This array is order-sensitive, don't change the order without looking at randomizeStartBonusCards_Click in CalculatorActivity and at StartBonusCards.
    -->
    <string-array name="start_bonus_cards">
        <item>Coin</item>
        <item>Black Track</item>
        <item>Industry</item>
        <item>Doubler</item>
        <item>Coal</item>
    </string-array>
    <string name="if_not_coal">if not Coal</string>
</resources>
