<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:background="@android:color/black">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:background="@drawable/history"
        android:paddingTop="3dp"
        android:id="@+id/historyScroll">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previousActions"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/doublerToggleButton"
                    android:layout_weight="1"
                    android:onClick="doublerToggleButton_Click"
                    android:layout_margin="3dp"
                    android:src="@drawable/doubler_off"
                    android:background="@drawable/button"
                    android:contentDescription="@string/doubler" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/revaluationToggleButton"
                    android:longClickable="false"
                    android:layout_weight="1"
                    android:onClick="revaluationToggleButton_Click"
                    android:background="@drawable/button"
                    android:src="@drawable/revaluation_off"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/revaluation_marker" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/greyButton"
                    android:layout_weight="1"
                    android:onClick="greyButton_Click"
                    android:src="@drawable/grey"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    android:contentDescription="@string/grey" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/brownButton"
                    android:layout_weight="1"
                    android:onClick="brownButton_Click"
                    android:src="@drawable/brown"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    android:contentDescription="@string/brown" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/beigeButton"
                    android:layout_weight="1"
                    android:onClick="beigeButton_Click"
                    android:src="@drawable/beige"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    android:contentDescription="@string/beige" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/whiteButton"
                    android:layout_weight="1"
                    android:onClick="whiteButton_Click"
                    android:src="@drawable/white"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    android:contentDescription="@string/white" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:id="@+id/oneButton"
                    android:layout_weight="1"
                    android:onClick="oneButton_Click"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:id="@+id/twoButton"
                    android:layout_weight="1"
                    android:onClick="twoButton_Click"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:id="@+id/threeButton"
                    android:layout_weight="1"
                    android:onClick="threeButton_Click"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:id="@+id/fourButton"
                    android:layout_weight="1"
                    android:onClick="fourButton_Click"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:id="@+id/fiveButton"
                    android:layout_weight="1"
                    android:onClick="fiveButton_Click"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ten"
                    android:id="@+id/tenButton"
                    android:layout_weight="1"
                    android:onClick="tenButton_Click"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_sign"
                    android:id="@+id/plusButton"
                    android:layout_weight="1"
                    android:onClick="plusButton_Click"
                    android:layout_margin="3dp"
                    android:background="@drawable/button" />

                <Button
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus_sign"
                    android:id="@+id/minusButton"
                    android:layout_weight="1"
                    android:onClick="minusButton_Click"
                    android:layout_margin="3dp"
                    android:background="@drawable/button" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/industryButton"
                    android:layout_weight="1"
                    android:onClick="industryButton_Click"
                    android:src="@drawable/industry_dropdown"
                    android:layout_margin="3dp"
                    android:background="@drawable/button"
                    android:contentDescription="@string/industry" />

            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scorePanel"
                android:background="@drawable/score_panel"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/score"
                        android:id="@+id/scoreLabel" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/zero"
                        android:id="@+id/scoreValue"
                        android:layout_toRightOf="@+id/scoreLabel"
                        android:layout_toEndOf="@+id/scoreLabel"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp" />
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:id="@+id/clearButton"
                android:layout_marginTop="26dp"
                android:onClick="clearButton_Click"
                android:layout_margin="3dp"
                android:background="@drawable/button"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
